📖 docs : swagger update
